added table of contents to split_scale_resample notebook

--- a/notebooks/(1) data cleaning and exploration.ipynb
+++ b/notebooks/(1) data cleaning and exploration.ipynb
@@ -1564,7 +1564,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Data Cleaning"
    ]
@@ -1572,7 +1574,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## Drop Duplicated Rows"
@@ -1966,7 +1969,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## Save Cleaned DataFrame"
