--- a/notebooks/(2) split_scale_and_resample.ipynb
+++ b/notebooks/(2) split_scale_and_resample.ipynb
@@ -4,33 +4,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction"
+    "# Notebook Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-01T15:34:41.919403Z",
+     "start_time": "2020-10-01T15:34:41.915421Z"
+    }
+   },
+   "source": [
+    "This notebook provides:\n",
+    "* [Library Imports](#Library-Imports)\n",
+    "* [Data Import](#Data-Import)\n",
+    "* [Train:Test Split](#Train:Test-Split)\n",
+    "* [Scaling with Robust Scaler](#Scaling)\n",
+    "* [Resampling with SMOTE and/or Random Undersampling](#Resampling)\n",
+    "* [Save New Data](#Save-New-Data)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook performs the following on the dataset:\n",
-    "* Train:Test Split\n",
-    "* Scaling via Robust Scaler\n",
-    "* Resamples via SMOTE and/or Random Undersampling"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Import Libraries"
+    "# Library Imports"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-06T15:59:48.997136Z",
-     "start_time": "2020-08-06T15:59:48.211362Z"
+     "end_time": "2020-10-01T15:36:19.855341Z",
+     "start_time": "2020-10-01T15:36:16.161330Z"
     }
    },
    "outputs": [],
@@ -53,14 +61,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-06T15:59:49.363951Z",
-     "start_time": "2020-08-06T15:59:48.998876Z"
+     "end_time": "2020-10-01T15:36:20.873122Z",
+     "start_time": "2020-10-01T15:36:19.857625Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/adam/opt/anaconda3/lib/python3.7/site-packages/dask/dataframe/utils.py:14: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
+      "  import pandas.util.testing as tm\n"
+     ]
+    }
+   ],
    "source": [
     "# Import functions.py file\n",
     "import sys\n",
@@ -71,11 +88,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-06T15:59:49.368186Z",
-     "start_time": "2020-08-06T15:59:49.365951Z"
+     "end_time": "2020-10-01T15:36:20.878338Z",
+     "start_time": "2020-10-01T15:36:20.875972Z"
     }
    },
    "outputs": [],
@@ -87,16 +104,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Import Cleaned Data"
+    "# Data Import"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-06T15:59:52.128354Z",
-     "start_time": "2020-08-06T15:59:49.369591Z"
+     "end_time": "2020-10-01T15:36:23.371394Z",
+     "start_time": "2020-10-01T15:36:20.880337Z"
     },
     "scrolled": true
    },
@@ -147,7 +164,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>0.0</td>\n",
        "      <td>-1.359807</td>\n",
        "      <td>-0.072781</td>\n",
@@ -171,7 +188,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>0.0</td>\n",
        "      <td>1.191857</td>\n",
        "      <td>0.266151</td>\n",
@@ -195,7 +212,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>1.0</td>\n",
        "      <td>-1.358354</td>\n",
        "      <td>-1.340163</td>\n",
@@ -242,7 +259,7 @@
        "[3 rows x 31 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,11 +278,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-06T15:59:52.329262Z",
-     "start_time": "2020-08-06T15:59:52.129990Z"
+     "end_time": "2020-10-01T15:36:23.567920Z",
+     "start_time": "2020-10-01T15:36:23.372977Z"
     }
    },
    "outputs": [
@@ -317,11 +334,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-06T15:59:52.333127Z",
-     "start_time": "2020-08-06T15:59:52.330916Z"
+     "end_time": "2020-10-01T15:36:23.572241Z",
+     "start_time": "2020-10-01T15:36:23.569821Z"
     }
    },
    "outputs": [],
@@ -338,11 +355,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-06T15:59:52.545878Z",
-     "start_time": "2020-08-06T15:59:52.336724Z"
+     "end_time": "2020-10-01T15:36:23.773503Z",
+     "start_time": "2020-10-01T15:36:23.574437Z"
     }
    },
    "outputs": [],
@@ -392,11 +409,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-06T15:59:52.911202Z",
-     "start_time": "2020-08-06T15:59:52.548693Z"
+     "end_time": "2020-10-01T15:36:24.149730Z",
+     "start_time": "2020-10-01T15:36:23.777087Z"
     }
    },
    "outputs": [
@@ -445,7 +462,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Save new data"
+    "# Save New Data"
    ]
   },
   {
@@ -457,11 +474,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-06T15:59:52.915672Z",
-     "start_time": "2020-08-06T15:59:52.913031Z"
+     "end_time": "2020-10-01T15:36:24.154650Z",
+     "start_time": "2020-10-01T15:36:24.152292Z"
     },
     "code_folding": []
    },
@@ -474,11 +491,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-06T15:59:52.920189Z",
-     "start_time": "2020-08-06T15:59:52.917317Z"
+     "end_time": "2020-10-01T15:36:24.159224Z",
+     "start_time": "2020-10-01T15:36:24.156581Z"
     }
    },
    "outputs": [],
@@ -490,11 +507,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-06T15:59:53.000779Z",
-     "start_time": "2020-08-06T15:59:52.921955Z"
+     "end_time": "2020-10-01T15:36:24.188178Z",
+     "start_time": "2020-10-01T15:36:24.160993Z"
     }
    },
    "outputs": [
@@ -586,11 +603,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-06T16:00:42.392187Z",
-     "start_time": "2020-08-06T15:59:53.002617Z"
+     "end_time": "2020-10-01T15:37:14.555610Z",
+     "start_time": "2020-10-01T15:36:24.189655Z"
     }
    },
    "outputs": [],
@@ -621,11 +638,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-06T16:00:51.564498Z",
-     "start_time": "2020-08-06T16:00:42.393629Z"
+     "end_time": "2020-10-01T15:37:23.660306Z",
+     "start_time": "2020-10-01T15:37:14.557763Z"
     }
    },
    "outputs": [],
