--- a/notebooks/predictive_modelling.ipynb
+++ b/notebooks/predictive_modelling.ipynb
@@ -28,14 +28,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Library Install"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "We need to install a previous version of matplotlib, otherwise seaborn heatmaps/confusion matrix will be broken"
    ]
@@ -47,7 +51,8 @@
     "ExecuteTime": {
      "end_time": "2020-08-06T19:52:38.090152Z",
      "start_time": "2020-08-06T19:52:36.665346Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -77,7 +82,8 @@
     "ExecuteTime": {
      "end_time": "2020-08-06T19:52:39.455087Z",
      "start_time": "2020-08-06T19:52:38.092808Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -97,7 +103,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Library Imports"
    ]
@@ -109,7 +117,8 @@
     "ExecuteTime": {
      "end_time": "2020-08-06T19:52:40.411468Z",
      "start_time": "2020-08-06T19:52:39.457683Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -154,7 +163,8 @@
     "ExecuteTime": {
      "end_time": "2020-08-06T20:07:43.422454Z",
      "start_time": "2020-08-06T20:07:43.419105Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -172,7 +182,8 @@
     "ExecuteTime": {
      "end_time": "2020-08-06T19:52:40.421291Z",
      "start_time": "2020-08-06T19:52:40.419046Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -181,21 +192,27 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Introduction"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "three major approaches to handle imbalanced data: data sampling, algorithm modifications, and cost-sensitive learning."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Import Cleaned Data "
    ]
@@ -208,6 +225,7 @@
      "end_time": "2020-08-06T19:52:43.182448Z",
      "start_time": "2020-08-06T19:52:40.423330Z"
     },
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -364,7 +382,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Train:Test Split"
    ]
@@ -376,7 +396,8 @@
     "ExecuteTime": {
      "end_time": "2020-08-06T19:52:43.370154Z",
      "start_time": "2020-08-06T19:52:43.184507Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -404,7 +425,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "* We choose to stratify as we want to keep the distribution of classes the same in the training set as the test set. \n",
     "* Additionally we must ensure there are at least some fraudulent transactions in the test dataset."
@@ -412,14 +435,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Scaling"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "* Scaling the data will improve the predictive performance of some machine learning models.  \n",
     "    * Without scaling, gradient-based estimating models (such as linear or logistic regression) will take longer to converge or may not be able to converge at all."
@@ -432,7 +459,8 @@
     "ExecuteTime": {
      "end_time": "2020-08-06T19:52:43.375873Z",
      "start_time": "2020-08-06T19:52:43.373652Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -441,7 +469,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "* As seen earlier with the \"Distribution of Amount\", the data is not normally distributed and there are a lot of outliers in our data, so we have chosen to use Robust Scaling, rather than Standard Scaling."
    ]
@@ -453,7 +483,8 @@
     "ExecuteTime": {
      "end_time": "2020-08-06T19:52:43.582903Z",
      "start_time": "2020-08-06T19:52:43.378813Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -466,21 +497,27 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "* We must be careful to only scale the test data using the scaling parameters learned on the train data."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Resampling"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "We will be using resampling techniques to improve the effectiveness of our machine learning models\n",
     "* Resampling involves drawing repeated samples from the original dataset to create a new dataset which either reduces the ratio of the majority class (undersampling) or increases the ratio of the minority class (oversampling). A combination of the two can also be used.\n",
@@ -507,7 +544,8 @@
     "ExecuteTime": {
      "end_time": "2020-08-06T19:52:43.917359Z",
      "start_time": "2020-08-06T19:52:43.584464Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
