--- a/notebooks/(1) data cleaning and exploration.ipynb
+++ b/notebooks/(1) data cleaning and exploration.ipynb
@@ -71,11 +71,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T01:20:12.563771Z",
-     "start_time": "2020-10-01T01:20:08.770911Z"
+     "end_time": "2020-10-01T16:03:22.254295Z",
+     "start_time": "2020-10-01T16:03:18.179932Z"
     },
     "hidden": true
    },
@@ -137,11 +137,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T01:20:15.003743Z",
-     "start_time": "2020-10-01T01:20:12.566352Z"
+     "end_time": "2020-10-01T16:03:24.851396Z",
+     "start_time": "2020-10-01T16:03:22.256878Z"
     },
     "hidden": true,
     "scrolled": false
@@ -288,7 +288,7 @@
        "[3 rows x 31 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,11 +300,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T01:20:15.008616Z",
-     "start_time": "2020-10-01T01:20:15.005343Z"
+     "end_time": "2020-10-01T16:03:24.858215Z",
+     "start_time": "2020-10-01T16:03:24.854221Z"
     },
     "hidden": true,
     "scrolled": true
@@ -320,7 +320,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,18 +331,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Data Exploration"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "<details><summary><strong>Exploration Summary</strong></summary>\n",
     "    <br>\n",
@@ -357,13 +353,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T01:20:15.013153Z",
-     "start_time": "2020-10-01T01:20:15.010086Z"
-    },
-    "hidden": true
+     "end_time": "2020-10-01T16:03:24.863759Z",
+     "start_time": "2020-10-01T16:03:24.860427Z"
+    }
    },
    "outputs": [
     {
@@ -372,7 +367,7 @@
        "(284807, 31)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,13 +378,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T01:20:15.054696Z",
-     "start_time": "2020-10-01T01:20:15.014562Z"
-    },
-    "hidden": true
+     "end_time": "2020-10-01T16:03:24.909230Z",
+     "start_time": "2020-10-01T16:03:24.865547Z"
+    }
    },
    "outputs": [
     {
@@ -443,13 +437,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T01:20:15.078378Z",
-     "start_time": "2020-10-01T01:20:15.056388Z"
-    },
-    "hidden": true
+     "end_time": "2020-10-01T16:03:24.931768Z",
+     "start_time": "2020-10-01T16:03:24.910932Z"
+    }
    },
    "outputs": [
     {
@@ -467,13 +460,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T01:20:15.389972Z",
-     "start_time": "2020-10-01T01:20:15.082025Z"
+     "end_time": "2020-10-01T16:03:25.239162Z",
+     "start_time": "2020-10-01T16:03:24.933513Z"
     },
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -773,7 +765,7 @@
        "[8 rows x 31 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -784,13 +776,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T01:20:22.497609Z",
-     "start_time": "2020-10-01T01:20:15.392872Z"
+     "end_time": "2020-10-01T16:03:33.021232Z",
+     "start_time": "2020-10-01T16:03:25.242141Z"
     },
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -815,9 +806,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "* The \"*Time*\" variable looks interesting as there are two peaks.  \n",
     "* The \"*Amount*\" variable is heavily skewed to the lower values"
@@ -825,22 +814,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Heatmap of correlation between features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T01:20:23.678560Z",
-     "start_time": "2020-10-01T01:20:22.499552Z"
-    },
-    "hidden": true
+     "end_time": "2020-10-01T16:03:34.301905Z",
+     "start_time": "2020-10-01T16:03:33.023688Z"
+    }
    },
    "outputs": [
     {
@@ -863,13 +849,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T01:20:24.094124Z",
-     "start_time": "2020-10-01T01:20:23.680393Z"
-    },
-    "hidden": true
+     "end_time": "2020-10-01T16:03:34.719445Z",
+     "start_time": "2020-10-01T16:03:34.303904Z"
+    }
    },
    "outputs": [
     {
@@ -901,31 +886,26 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "There is barely any correlation between the features as V1:V28 have been through PCA."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Distribution of \"Class\" feature"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T01:20:24.104046Z",
-     "start_time": "2020-10-01T01:20:24.095837Z"
-    },
-    "hidden": true
+     "end_time": "2020-10-01T16:03:34.731590Z",
+     "start_time": "2020-10-01T16:03:34.721074Z"
+    }
    },
    "outputs": [
     {
@@ -946,9 +926,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "* The classes are heavily imbalanced.\n",
     "* If we simply use this distribution of Classes for our predictive models, the models will likely overfit.  \n",
@@ -957,9 +935,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Distribution of \"Amount\" feature"
    ]
@@ -967,8 +943,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### All transactions"
@@ -976,11 +951,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T01:20:24.770611Z",
-     "start_time": "2020-10-01T01:20:24.105818Z"
+     "end_time": "2020-10-01T16:03:35.504925Z",
+     "start_time": "2020-10-01T16:03:34.733315Z"
     },
     "hidden": true,
     "scrolled": false
@@ -1067,11 +1042,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T01:20:25.066597Z",
-     "start_time": "2020-10-01T01:20:24.772766Z"
+     "end_time": "2020-10-01T16:03:35.815169Z",
+     "start_time": "2020-10-01T16:03:35.507084Z"
     },
     "hidden": true
    },
@@ -1093,23 +1068,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Fraudulent transactions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T01:20:25.695091Z",
-     "start_time": "2020-10-01T01:20:25.068535Z"
+     "end_time": "2020-10-01T16:03:36.449097Z",
+     "start_time": "2020-10-01T16:03:35.816768Z"
     },
-    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -1167,9 +1138,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "* We can clearly see that the amount for fraud transaction are mostly below 500  \n",
     "    * A closer inspection could show more detail on the most common ammounts"
@@ -1177,23 +1146,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Fraudulent transactions < 110"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T01:20:26.302025Z",
-     "start_time": "2020-10-01T01:20:25.697378Z"
+     "end_time": "2020-10-01T16:03:37.451438Z",
+     "start_time": "2020-10-01T16:03:36.450703Z"
     },
-    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -1225,8 +1190,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### Fraudulent transactions - most common Amounts"
@@ -1234,11 +1198,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T01:20:26.645463Z",
-     "start_time": "2020-10-01T01:20:26.304057Z"
+     "end_time": "2020-10-01T16:03:37.836220Z",
+     "start_time": "2020-10-01T16:03:37.453454Z"
     },
     "hidden": true
    },
@@ -1279,23 +1243,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Distribution of observations over \"Time\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T01:20:27.175302Z",
-     "start_time": "2020-10-01T01:20:26.647613Z"
-    },
-    "hidden": true
+     "end_time": "2020-10-01T16:03:38.435228Z",
+     "start_time": "2020-10-01T16:03:37.838067Z"
+    }
    },
    "outputs": [
     {
@@ -1319,9 +1279,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "* We know from the Data Background that the observations were taken over the course of 2 days.  \n",
     "* We can edit the \"Time\" for observations on day 2, to group the observations into 1 day. \n",
@@ -1330,13 +1288,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T01:20:27.224190Z",
-     "start_time": "2020-10-01T01:20:27.176890Z"
-    },
-    "hidden": true
+     "end_time": "2020-10-01T16:03:38.485386Z",
+     "start_time": "2020-10-01T16:03:38.436857Z"
+    }
    },
    "outputs": [
     {
@@ -1373,13 +1330,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T01:20:27.267558Z",
-     "start_time": "2020-10-01T01:20:27.225869Z"
-    },
-    "hidden": true
+     "end_time": "2020-10-01T16:03:38.529304Z",
+     "start_time": "2020-10-01T16:03:38.486886Z"
+    }
    },
    "outputs": [
     {
@@ -1388,7 +1344,7 @@
        "True"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1403,13 +1359,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T01:20:27.331345Z",
-     "start_time": "2020-10-01T01:20:27.269698Z"
-    },
-    "hidden": true
+     "end_time": "2020-10-01T16:03:38.601174Z",
+     "start_time": "2020-10-01T16:03:38.531314Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -1419,13 +1374,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T01:20:28.617269Z",
-     "start_time": "2020-10-01T01:20:27.333228Z"
+     "end_time": "2020-10-01T16:03:39.603456Z",
+     "start_time": "2020-10-01T16:03:38.602863Z"
     },
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -1450,36 +1404,31 @@
     "plt.ylabel('Number of Transactions')\n",
     "sns.despine()\n",
     "\n",
-    "plt.savefig('{}.png'.format(title), bbox_inches='tight')"
+    "plt.savefig('../visuals/{}.png'.format(title.lower().replace(' ','_')), bbox_inches='tight')"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "* The chart above makes sense, with a dip during common sleeping hours, and transaction numbers increasing during the day time"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Distribution of fraud transactions over time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T01:20:29.502568Z",
-     "start_time": "2020-10-01T01:20:28.619429Z"
+     "end_time": "2020-10-01T16:04:17.281017Z",
+     "start_time": "2020-10-01T16:04:16.310656Z"
     },
-    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -1506,36 +1455,31 @@
     "plt.ylabel('Number of Fraud Transactions')\n",
     "sns.despine()\n",
     "\n",
-    "plt.savefig('{}.png'.format(title), bbox_inches='tight')"
+    "plt.savefig('../visuals/{}.png'.format(title.lower().replace(' ','_')), bbox_inches='tight')"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "* The most common hour of the day for fraud seems to be at midday"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Null Values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T01:20:29.534424Z",
-     "start_time": "2020-10-01T01:20:29.504801Z"
-    },
-    "hidden": true
+     "end_time": "2020-10-01T16:03:40.601382Z",
+     "start_time": "2020-10-01T16:03:40.571658Z"
+    }
    },
    "outputs": [
     {
@@ -1544,7 +1488,7 @@
        "0"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1555,11 +1499,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "* We can see there are no Null Values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Cleaning"
    ]
   },
   {
@@ -1568,26 +1517,16 @@
     "heading_collapsed": true
    },
    "source": [
-    "# Data Cleaning"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
-   "source": [
     "## Drop Duplicated Rows"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T01:22:02.171334Z",
-     "start_time": "2020-10-01T01:22:01.693838Z"
+     "end_time": "2020-10-01T16:03:41.066082Z",
+     "start_time": "2020-10-01T16:03:40.605266Z"
     },
     "hidden": true
    },
@@ -1607,11 +1546,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 38,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T01:20:30.429422Z",
-     "start_time": "2020-10-01T01:20:29.991294Z"
+     "end_time": "2020-10-01T16:03:41.508291Z",
+     "start_time": "2020-10-01T16:03:41.067750Z"
     },
     "hidden": true,
     "scrolled": false
@@ -1947,7 +1886,7 @@
        "[10 rows x 31 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1968,23 +1907,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Save Cleaned DataFrame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 39,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T01:20:57.389208Z",
-     "start_time": "2020-10-01T01:20:30.430892Z"
-    },
-    "hidden": true
+     "end_time": "2020-10-01T16:04:09.746817Z",
+     "start_time": "2020-10-01T16:03:41.509962Z"
+    }
    },
    "outputs": [],
    "source": [
