--- a/notebooks/(2) split_scale_and_resample.ipynb
+++ b/notebooks/(2) split_scale_and_resample.ipynb
@@ -34,11 +34,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T15:36:19.855341Z",
-     "start_time": "2020-10-01T15:36:16.161330Z"
+     "end_time": "2020-10-01T19:18:50.382996Z",
+     "start_time": "2020-10-01T19:18:47.851910Z"
     }
    },
    "outputs": [],
@@ -61,11 +61,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T15:36:20.873122Z",
-     "start_time": "2020-10-01T15:36:19.857625Z"
+     "end_time": "2020-10-01T19:18:51.032511Z",
+     "start_time": "2020-10-01T19:18:50.385356Z"
     }
    },
    "outputs": [
@@ -88,11 +88,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T15:36:20.878338Z",
-     "start_time": "2020-10-01T15:36:20.875972Z"
+     "end_time": "2020-10-01T19:18:51.036691Z",
+     "start_time": "2020-10-01T19:18:51.034660Z"
     }
    },
    "outputs": [],
@@ -109,11 +109,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T15:36:23.371394Z",
-     "start_time": "2020-10-01T15:36:20.880337Z"
+     "end_time": "2020-10-01T19:18:53.625886Z",
+     "start_time": "2020-10-01T19:18:51.038404Z"
     },
     "scrolled": true
    },
@@ -259,7 +259,7 @@
        "[3 rows x 31 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,8 +281,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T15:36:23.567920Z",
-     "start_time": "2020-10-01T15:36:23.372977Z"
+     "end_time": "2020-10-01T19:19:22.032521Z",
+     "start_time": "2020-10-01T19:19:21.819881Z"
     }
    },
    "outputs": [
@@ -334,11 +334,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T15:36:23.572241Z",
-     "start_time": "2020-10-01T15:36:23.569821Z"
+     "end_time": "2020-10-01T19:19:22.048298Z",
+     "start_time": "2020-10-01T19:19:22.045359Z"
     }
    },
    "outputs": [],
@@ -355,11 +355,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T15:36:23.773503Z",
-     "start_time": "2020-10-01T15:36:23.574437Z"
+     "end_time": "2020-10-01T19:19:22.260477Z",
+     "start_time": "2020-10-01T19:19:22.051194Z"
     }
    },
    "outputs": [],
@@ -409,11 +409,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T15:36:24.149730Z",
-     "start_time": "2020-10-01T15:36:23.777087Z"
+     "end_time": "2020-10-01T19:19:22.648350Z",
+     "start_time": "2020-10-01T19:19:22.262113Z"
     }
    },
    "outputs": [
@@ -474,11 +474,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T15:36:24.154650Z",
-     "start_time": "2020-10-01T15:36:24.152292Z"
+     "end_time": "2020-10-01T19:19:22.653001Z",
+     "start_time": "2020-10-01T19:19:22.650128Z"
     },
     "code_folding": []
    },
@@ -491,11 +491,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T15:36:24.159224Z",
-     "start_time": "2020-10-01T15:36:24.156581Z"
+     "end_time": "2020-10-01T19:19:22.657449Z",
+     "start_time": "2020-10-01T19:19:22.654884Z"
     }
    },
    "outputs": [],
@@ -507,12 +507,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T15:36:24.188178Z",
-     "start_time": "2020-10-01T15:36:24.160993Z"
-    }
+     "end_time": "2020-10-01T19:19:22.676441Z",
+     "start_time": "2020-10-01T19:19:22.669928Z"
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -523,40 +524,20 @@
       "\tInput:\t<class 'numpy.ndarray'>\n",
       "\tOutput:\t<class 'pandas.core.frame.DataFrame'>\n",
       "\n",
-      "y_train\n",
-      "\tInput:\t<class 'pandas.core.series.Series'>\n",
-      "\tOutput:\t<class 'pandas.core.frame.DataFrame'>\n",
-      "\n",
       "X_test\n",
       "\tInput:\t<class 'numpy.ndarray'>\n",
-      "\tOutput:\t<class 'pandas.core.frame.DataFrame'>\n",
-      "\n",
-      "y_test\n",
-      "\tInput:\t<class 'pandas.core.series.Series'>\n",
       "\tOutput:\t<class 'pandas.core.frame.DataFrame'>\n",
       "\n",
       "X_train_smote\n",
       "\tInput:\t<class 'numpy.ndarray'>\n",
       "\tOutput:\t<class 'pandas.core.frame.DataFrame'>\n",
       "\n",
-      "y_train_smote\n",
-      "\tInput:\t<class 'pandas.core.series.Series'>\n",
-      "\tOutput:\t<class 'pandas.core.frame.DataFrame'>\n",
-      "\n",
       "X_train_under\n",
       "\tInput:\t<class 'numpy.ndarray'>\n",
       "\tOutput:\t<class 'pandas.core.frame.DataFrame'>\n",
       "\n",
-      "y_train_under\n",
-      "\tInput:\t<class 'pandas.core.series.Series'>\n",
-      "\tOutput:\t<class 'pandas.core.frame.DataFrame'>\n",
-      "\n",
       "X_train_smote_under\n",
       "\tInput:\t<class 'numpy.ndarray'>\n",
-      "\tOutput:\t<class 'pandas.core.frame.DataFrame'>\n",
-      "\n",
-      "X_train_smote_under\n",
-      "\tInput:\t<class 'pandas.core.series.Series'>\n",
       "\tOutput:\t<class 'pandas.core.frame.DataFrame'>\n",
       "\n"
      ]
@@ -566,32 +547,37 @@
     "# Original Train\n",
     "X_train, input_dtype, output_dtype = convert_array_to_dataframe(X_train, X_columns)\n",
     "print('X_train\\n\\tInput:\\t{}\\n\\tOutput:\\t{}\\n'.format(input_dtype, output_dtype))\n",
-    "y_train, input_dtype, output_dtype = convert_array_to_dataframe(y_train, y_columns)\n",
-    "print('y_train\\n\\tInput:\\t{}\\n\\tOutput:\\t{}\\n'.format(input_dtype, output_dtype))\n",
+    "# y_train, input_dtype, output_dtype = convert_array_to_dataframe(y_train, y_columns)\n",
+    "# y_train.dropna(inplace=True)\n",
+    "# print('y_train\\n\\tInput:\\t{}\\n\\tOutput:\\t{}\\n'.format(input_dtype, output_dtype))\n",
     "\n",
     "# Original Test\n",
     "X_test, input_dtype, output_dtype = convert_array_to_dataframe(X_test, X_columns)\n",
     "print('X_test\\n\\tInput:\\t{}\\n\\tOutput:\\t{}\\n'.format(input_dtype, output_dtype))\n",
-    "y_test, input_dtype, output_dtype = convert_array_to_dataframe(y_test, y_columns)\n",
-    "print('y_test\\n\\tInput:\\t{}\\n\\tOutput:\\t{}\\n'.format(input_dtype, output_dtype))\n",
+    "# y_test, input_dtype, output_dtype = convert_array_to_dataframe(y_test, y_columns)\n",
+    "# y_test.dropna(inplace=True)\n",
+    "# print('y_test\\n\\tInput:\\t{}\\n\\tOutput:\\t{}\\n'.format(input_dtype, output_dtype))\n",
     "\n",
     "# SMOTE Train\n",
     "X_train_smote, input_dtype, output_dtype = convert_array_to_dataframe(X_train_smote, X_columns)\n",
     "print('X_train_smote\\n\\tInput:\\t{}\\n\\tOutput:\\t{}\\n'.format(input_dtype, output_dtype))\n",
-    "y_train_smote, input_dtype, output_dtype = convert_array_to_dataframe(y_train_smote, y_columns)\n",
-    "print('y_train_smote\\n\\tInput:\\t{}\\n\\tOutput:\\t{}\\n'.format(input_dtype, output_dtype))\n",
+    "# y_train_smote, input_dtype, output_dtype = convert_array_to_dataframe(y_train_smote, y_columns)\n",
+    "# y_train_smote.dropna(inplace=True)\n",
+    "# print('y_train_smote\\n\\tInput:\\t{}\\n\\tOutput:\\t{}\\n'.format(input_dtype, output_dtype))\n",
     "\n",
     "# Undersampled Train\n",
     "X_train_under, input_dtype, output_dtype = convert_array_to_dataframe(X_train_under, X_columns)\n",
     "print('X_train_under\\n\\tInput:\\t{}\\n\\tOutput:\\t{}\\n'.format(input_dtype, output_dtype))\n",
-    "y_train_under, input_dtype, output_dtype = convert_array_to_dataframe(y_train_under, y_columns)\n",
-    "print('y_train_under\\n\\tInput:\\t{}\\n\\tOutput:\\t{}\\n'.format(input_dtype, output_dtype))\n",
+    "# y_train_under, input_dtype, output_dtype = convert_array_to_dataframe(y_train_under, y_columns)\n",
+    "# y_train_under.dropna(inplace=True)\n",
+    "# print('y_train_under\\n\\tInput:\\t{}\\n\\tOutput:\\t{}\\n'.format(input_dtype, output_dtype))\n",
     "\n",
     "# SMOTE and Undersampled Train\n",
     "X_train_smote_under, input_dtype, output_dtype = convert_array_to_dataframe(X_train_smote_under, X_columns)\n",
     "print('X_train_smote_under\\n\\tInput:\\t{}\\n\\tOutput:\\t{}\\n'.format(input_dtype, output_dtype))\n",
-    "y_train_smote_under, input_dtype, output_dtype = convert_array_to_dataframe(y_train_smote_under, y_columns)\n",
-    "print('X_train_smote_under\\n\\tInput:\\t{}\\n\\tOutput:\\t{}\\n'.format(input_dtype, output_dtype))"
+    "# y_train_smote_under, input_dtype, output_dtype = convert_array_to_dataframe(y_train_smote_under, y_columns)\n",
+    "# print('X_train_smote_under\\n\\tInput:\\t{}\\n\\tOutput:\\t{}\\n'.format(input_dtype, output_dtype))\n",
+    "# y_train_smote_under.dropna(inplace=True)"
    ]
   },
   {
@@ -603,11 +589,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T15:37:14.555610Z",
-     "start_time": "2020-10-01T15:36:24.189655Z"
+     "end_time": "2020-10-01T19:20:12.151506Z",
+     "start_time": "2020-10-01T19:19:22.686822Z"
     }
    },
    "outputs": [],
@@ -638,18 +624,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T15:37:23.660306Z",
-     "start_time": "2020-10-01T15:37:14.557763Z"
+     "end_time": "2020-10-01T19:20:21.302446Z",
+     "start_time": "2020-10-01T19:20:12.153659Z"
     }
    },
    "outputs": [],
    "source": [
+    "# Original Test\n",
     "X_test.to_csv('../data/processed/X_test.gz', index=0, compression='gzip')\n",
     "y_test.to_csv('../data/processed/y_test.gz', index=0, compression='gzip', header=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
