--- a/notebooks/(1) data cleaning and exploration.ipynb
+++ b/notebooks/(1) data cleaning and exploration.ipynb
@@ -21,6 +21,14 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following key steps are made:\n",
+    "* XXX"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "heading_collapsed": true
    },
@@ -331,14 +339,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Data Exploration"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "<details><summary><strong>Exploration Summary</strong></summary>\n",
     "    <br>\n",
@@ -358,7 +370,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-01T16:03:24.863759Z",
      "start_time": "2020-10-01T16:03:24.860427Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -383,7 +396,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-01T16:03:24.909230Z",
      "start_time": "2020-10-01T16:03:24.865547Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -442,7 +456,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-01T16:03:24.931768Z",
      "start_time": "2020-10-01T16:03:24.910932Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -466,6 +481,7 @@
      "end_time": "2020-10-01T16:03:25.239162Z",
      "start_time": "2020-10-01T16:03:24.933513Z"
     },
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -782,6 +798,7 @@
      "end_time": "2020-10-01T16:03:33.021232Z",
      "start_time": "2020-10-01T16:03:25.242141Z"
     },
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -806,7 +823,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "* The \"*Time*\" variable looks interesting as there are two peaks.  \n",
     "* The \"*Amount*\" variable is heavily skewed to the lower values"
@@ -814,7 +833,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## Heatmap of correlation between features"
    ]
@@ -826,7 +847,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-01T16:03:34.301905Z",
      "start_time": "2020-10-01T16:03:33.023688Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -854,7 +876,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-01T16:03:34.719445Z",
      "start_time": "2020-10-01T16:03:34.303904Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -886,14 +909,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "There is barely any correlation between the features as V1:V28 have been through PCA."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## Distribution of \"Class\" feature"
    ]
@@ -905,7 +932,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-01T16:03:34.731590Z",
      "start_time": "2020-10-01T16:03:34.721074Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -926,7 +954,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "* The classes are heavily imbalanced.\n",
     "* If we simply use this distribution of Classes for our predictive models, the models will likely overfit.  \n",
@@ -935,7 +965,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## Distribution of \"Amount\" feature"
    ]
@@ -943,7 +975,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### All transactions"
@@ -1068,7 +1101,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Fraudulent transactions"
    ]
@@ -1081,6 +1116,7 @@
      "end_time": "2020-10-01T16:03:36.449097Z",
      "start_time": "2020-10-01T16:03:35.816768Z"
     },
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -1138,7 +1174,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "* We can clearly see that the amount for fraud transaction are mostly below 500  \n",
     "    * A closer inspection could show more detail on the most common ammounts"
@@ -1146,7 +1184,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Fraudulent transactions < 110"
    ]
@@ -1159,6 +1199,7 @@
      "end_time": "2020-10-01T16:03:37.451438Z",
      "start_time": "2020-10-01T16:03:36.450703Z"
     },
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -1190,7 +1231,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### Fraudulent transactions - most common Amounts"
@@ -1243,7 +1285,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## Distribution of observations over \"Time\""
    ]
@@ -1255,7 +1299,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-01T16:03:38.435228Z",
      "start_time": "2020-10-01T16:03:37.838067Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -1279,7 +1324,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "* We know from the Data Background that the observations were taken over the course of 2 days.  \n",
     "* We can edit the \"Time\" for observations on day 2, to group the observations into 1 day. \n",
@@ -1293,7 +1340,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-01T16:03:38.485386Z",
      "start_time": "2020-10-01T16:03:38.436857Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -1335,7 +1383,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-01T16:03:38.529304Z",
      "start_time": "2020-10-01T16:03:38.486886Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -1364,7 +1413,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-01T16:03:38.601174Z",
      "start_time": "2020-10-01T16:03:38.531314Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -1380,6 +1430,7 @@
      "end_time": "2020-10-01T16:03:39.603456Z",
      "start_time": "2020-10-01T16:03:38.602863Z"
     },
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -1409,14 +1460,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "* The chart above makes sense, with a dip during common sleeping hours, and transaction numbers increasing during the day time"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Distribution of fraud transactions over time"
    ]
@@ -1429,6 +1484,7 @@
      "end_time": "2020-10-01T16:04:17.281017Z",
      "start_time": "2020-10-01T16:04:16.310656Z"
     },
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -1460,14 +1516,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "* The most common hour of the day for fraud seems to be at midday"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Null Values"
    ]
@@ -1479,7 +1539,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-01T16:03:40.601382Z",
      "start_time": "2020-10-01T16:03:40.571658Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -1499,7 +1560,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "* We can see there are no Null Values"
    ]
