updated TLDR for notebook 1

--- a/notebooks/(1) data cleaning and exploration.ipynb
+++ b/notebooks/(1) data cleaning and exploration.ipynb
@@ -23,8 +23,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following key steps are made:\n",
-    "* XXX"
+    "TL;DR\n",
+    "- The dataset is heavily imbalanced (0.17% frauds) so an F1 score will be used as a metric\n",
+    "- The most common fraud values are 1, 0 and 99.99\n",
+    "- The most common fraud time was 12 and 36 hours (midday on each of the 2 days)"
    ]
   },
   {
@@ -339,18 +341,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Data Exploration"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "<details><summary><strong>Exploration Summary</strong></summary>\n",
     "    <br>\n",
@@ -370,8 +368,7 @@
     "ExecuteTime": {
      "end_time": "2020-10-01T16:03:24.863759Z",
      "start_time": "2020-10-01T16:03:24.860427Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -396,8 +393,7 @@
     "ExecuteTime": {
      "end_time": "2020-10-01T16:03:24.909230Z",
      "start_time": "2020-10-01T16:03:24.865547Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -456,8 +452,7 @@
     "ExecuteTime": {
      "end_time": "2020-10-01T16:03:24.931768Z",
      "start_time": "2020-10-01T16:03:24.910932Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -481,7 +476,6 @@
      "end_time": "2020-10-01T16:03:25.239162Z",
      "start_time": "2020-10-01T16:03:24.933513Z"
     },
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -798,7 +792,6 @@
      "end_time": "2020-10-01T16:03:33.021232Z",
      "start_time": "2020-10-01T16:03:25.242141Z"
     },
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -823,9 +816,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "* The \"*Time*\" variable looks interesting as there are two peaks.  \n",
     "* The \"*Amount*\" variable is heavily skewed to the lower values"
@@ -833,9 +824,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Heatmap of correlation between features"
    ]
@@ -847,8 +836,7 @@
     "ExecuteTime": {
      "end_time": "2020-10-01T16:03:34.301905Z",
      "start_time": "2020-10-01T16:03:33.023688Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -876,8 +864,7 @@
     "ExecuteTime": {
      "end_time": "2020-10-01T16:03:34.719445Z",
      "start_time": "2020-10-01T16:03:34.303904Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -909,18 +896,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "There is barely any correlation between the features as V1:V28 have been through PCA."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Distribution of \"Class\" feature"
    ]
@@ -932,8 +915,7 @@
     "ExecuteTime": {
      "end_time": "2020-10-01T16:03:34.731590Z",
      "start_time": "2020-10-01T16:03:34.721074Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -954,9 +936,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "* The classes are heavily imbalanced.\n",
     "* If we simply use this distribution of Classes for our predictive models, the models will likely overfit.  \n",
@@ -965,9 +945,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Distribution of \"Amount\" feature"
    ]
@@ -975,8 +953,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### All transactions"
@@ -1101,9 +1078,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Fraudulent transactions"
    ]
@@ -1116,7 +1091,6 @@
      "end_time": "2020-10-01T16:03:36.449097Z",
      "start_time": "2020-10-01T16:03:35.816768Z"
     },
-    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -1174,9 +1148,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "* We can clearly see that the amount for fraud transaction are mostly below 500  \n",
     "    * A closer inspection could show more detail on the most common ammounts"
@@ -1184,9 +1156,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Fraudulent transactions < 110"
    ]
@@ -1199,7 +1169,6 @@
      "end_time": "2020-10-01T16:03:37.451438Z",
      "start_time": "2020-10-01T16:03:36.450703Z"
     },
-    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -1231,8 +1200,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### Fraudulent transactions - most common Amounts"
@@ -1285,9 +1253,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Distribution of observations over \"Time\""
    ]
@@ -1299,8 +1265,7 @@
     "ExecuteTime": {
      "end_time": "2020-10-01T16:03:38.435228Z",
      "start_time": "2020-10-01T16:03:37.838067Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -1324,9 +1289,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "* We know from the Data Background that the observations were taken over the course of 2 days.  \n",
     "* We can edit the \"Time\" for observations on day 2, to group the observations into 1 day. \n",
@@ -1340,8 +1303,7 @@
     "ExecuteTime": {
      "end_time": "2020-10-01T16:03:38.485386Z",
      "start_time": "2020-10-01T16:03:38.436857Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -1383,8 +1345,7 @@
     "ExecuteTime": {
      "end_time": "2020-10-01T16:03:38.529304Z",
      "start_time": "2020-10-01T16:03:38.486886Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -1413,8 +1374,7 @@
     "ExecuteTime": {
      "end_time": "2020-10-01T16:03:38.601174Z",
      "start_time": "2020-10-01T16:03:38.531314Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -1430,7 +1390,6 @@
      "end_time": "2020-10-01T16:03:39.603456Z",
      "start_time": "2020-10-01T16:03:38.602863Z"
     },
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -1460,18 +1419,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "* The chart above makes sense, with a dip during common sleeping hours, and transaction numbers increasing during the day time"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Distribution of fraud transactions over time"
    ]
@@ -1484,7 +1439,6 @@
      "end_time": "2020-10-01T16:04:17.281017Z",
      "start_time": "2020-10-01T16:04:16.310656Z"
     },
-    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -1516,18 +1470,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "* The most common hour of the day for fraud seems to be at midday"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Null Values"
    ]
@@ -1539,8 +1489,7 @@
     "ExecuteTime": {
      "end_time": "2020-10-01T16:03:40.601382Z",
      "start_time": "2020-10-01T16:03:40.571658Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -1560,9 +1509,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "* We can see there are no Null Values"
    ]
